fixed strange white space to the right

--- a/_sass/imports/_feed.scss
+++ b/_sass/imports/_feed.scss
@@ -353,4 +353,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .grid-view {
     margin: -20px;
     padding: 20px;
+    margin-right: 0px;
+    padding-right: 0px;
 }
