--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -1,6 +1,7 @@
 .post-card.single {
 	@media only screen and (max-width: $tablet) {
 		margin-top: 50px;
+		width: 100%;
 	}
 	.post-card-image {
         @media only screen and (min-width: $tablet) {
